# Depot

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
npm/: README.md  install.js  package.json
src/: cli.rs  lib.rs  main.rs  project.rs  report.rs  run.rs  tui.rs  util.rs
src/hub/: mod.rs  registry.rs  store.rs
src/scan/: known.rs  mod.rs  walk.rs
