[package]
name = "depot"
version = "0.2.0"
edition = "2021"
description = "Scan your machine for npm/python/ML disk hogs and reclaim space, plus a shared pnpm+uv global package store."
license = "MIT"

[lib]
name = "depot"
path = "src/lib.rs"

[[bin]]
name = "depot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
walkdir = "2"
trash = "5"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
